# profile-engine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  resume.example.json
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
docs/: architecture.md  cli.md
docs/decisions/: 0001-repository-structure.md  0002-schema-sources.md
docs/runbooks/: github-pages.md  local-development.md
docs/workflows/: golden-path.md
examples/: rendercv.example.yaml  resume.example.json
schemas/: jsonresume.schema.json  rendercv.schema.json
src/cvtool/: __main__.py  cli.py  convert_rendercv.py  validate.py
src/profilecli/: __main__.py  cli.py  convert_rendercv.py  validate.py
src/profilecli/templates/profileengine01classic/: SectionBeginning.j2.typ  _i18n.j2
src/profilecli/templates/profileengine01classic/html/: Full.html
src/profilecli/templates/profileengine01classic/markdown/: Header.j2.md  SectionBeginning.j2.md
tests/: subprocess_cli.py  test_cli.py  test_convert_rendercv.py  test_validate.py
